uploaded yt video SMC 2021

--- a/pub.bib
+++ b/pub.bib
@@ -5,6 +5,7 @@
 	organization={SMC},
 	year={2021},
 	extref={https://doi.org/10.5281/zenodo.5044984},
+	youtube={9YAGeJvni3I}
 }
 
 @inproceedings{tiraboschi2020spectral,
