:adhesive_bandage: use doi for links

--- a/pub.bib
+++ b/pub.bib
@@ -4,7 +4,8 @@
 	booktitle={Proceedings of the 18th Sound and Music Computing Conference},
 	organization={SMC},
 	year={2021},
-	extref={https://doi.org/10.5281/zenodo.5044984},
+	doi={10.5281/zenodo.5044984},
+	comment_extref={https://doi.org/10.5281/zenodo.5044984},
 	youtube={9YAGeJvni3I}
 }
 
@@ -14,7 +15,8 @@
 	booktitle={Proceedings of the 17th Sound and Music Computing Conference},
 	organization={SMC},
 	year={2020},
-	extref={https://smc2020torino.it/adminupload/file/SMCCIM_2020_paper_167.pdf},
+	doi={10.5281/zenodo.3898795},
+	comment_extref={https://doi.org/10.5281/zenodo.3898795},
 	youtube={LgphDw9KRY8&t=900s},
 	github={LIMUNIMI/SAMPLE}
 }
